minor update to portal utility object